log
Thu 20 Apr 2023 04:38:41 PM UTC: 
 tests:  1|8
total_score: 0/70
ee76437
Thu 20 Apr 2023 04:51:21 PM UTC: 
 treemap.c | 60 ++++++++++++++++++++++--------------------------------------
 1 file changed, 22 insertions(+), 38 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:14: error: ‘null’ undeclared (first use in this function)
   41 |   if (new == null)
      |              ^~~~
treemap.c:41:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
77abb00
Thu 20 Apr 2023 04:51:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7a86ddb
Thu 20 Apr 2023 05:13:10 PM UTC: 
 treemap.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:69:13: error: unused variable ‘current’ [-Werror=unused-variable]
   69 |   TreeNode* current = tree->root;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8a15534
Thu 20 Apr 2023 05:13:20 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
deb2e55
